# polybot-v3

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-20-polybot-v3.md
docs/superpowers/specs/: 2026-04-20-polybot-v3-copy-trading.md
polybot_v3/: __main__.py  bot_state.py  config.py  consensus.py  costs.py  executor.py  hyperliquid_client.py  leaderboard.py  loop.py  realtime.py  replicator.py  risk.py  telegram.py  tracker.py  trader_intel.py  trader_monitor.py  trailing.py
polybot_v3/dashboard/: app.py
polybot_v3/dashboard/templates/: analytics.html  base.html  index.html  positions.html  traders.html  trades.html
tests/: conftest.py  test_bot_state.py  test_consensus.py  test_costs.py  test_dashboard.py  test_hyperliquid_client.py  test_leaderboard.py  test_realtime.py  test_replicator.py  test_risk.py  test_tracker.py  test_trader_intel.py  test_trader_monitor.py  test_trailing.py
