[project]
name = "polybot-v3"
version = "0.3.0"
description = "Hyperliquid copy trading bot"
requires-python = ">=3.12"
dependencies = [
    "hyperliquid-python-sdk>=0.9",
    "httpx>=0.28",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polybot_v3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
